# pyschemata

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  bump_version.py  pyproject.toml  setup.cfg  tox.ini  vendor-schemastore.py  vendor.py
.github/workflows/: build.yaml
scripts/: bump-version.py  vendor-schemastore.py
src/pyschemata/: __init__.py
src/pyschemata/schemastore/: __init__.py  vendor_lock.json
