[metadata]
name = pyschemata
version = 22.6.0a1
description = Bringing SchemaStore to python as a package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sirosen/pyschemata
author = Stephen Rosen
author_email = sirosen@uchicago.edu

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
install_requires =
    importlib_resources;python_version<"3.9"
    requests<3.0
package_dir=
    =src
packages = find:
include_package_data = true

[options.packages.find]
where=src

[options.extras_require]
dev = pytest<7

[isort]
profile = black

[flake8]  # black-compatible
exclude = .git,.tox,__pycache__,.eggs,dist,.venv*,build
max-line-length = 90
ignore = W503,W504,E203,

[mypy]
strict = true
ignore_missing_imports = true
